--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -5,23 +5,41 @@
     android:layout_height="match_parent"
     tools:context=".ui.AdminActivity">
 
-    <TextView
-        android:id="@+id/textViewAdminTitle"
+    <!-- Contenedor para el título y el nuevo botón -->
+    <LinearLayout
+        android:id="@+id/headerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Panel de Administración"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:padding="16dp"/>
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/textViewAdminTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingStart="8dp"
+            android:text="Gestión de Platos"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:ignore="RtlSymmetry" />
+
+        <Button
+            android:id="@+id/buttonManageUsers"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Usuarios" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listViewAdminFood"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/textViewAdminTitle"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp"/>
+        android:layout_below="@id/headerLayout"
+        android:divider="?android:attr/listDivider"
+        android:dividerHeight="1dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddFood"
@@ -30,7 +48,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        android:src="@drawable/baseline_add_24"
-        android:contentDescription="Añadir nuevo plato"/>
+        android:contentDescription="Añadir nuevo plato"
+        android:src="@drawable/baseline_add_24" />
 
 </RelativeLayout>
